WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308464
[GTK][WPE] Non-composited renderer should not wait for UI process frame done notification to start rendering the next frame
https://bugs.webkit.org/show_bug.cgi?id=308464
Summary
[GTK][WPE] Non-composited renderer should not wait for UI process frame done ...
Carlos Garcia Campos
Reported
2026-02-23 05:10:58 PST
We need to wait until frame done notification to notify about the next frame, but it can be rendered already.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2026-02-23 06:42:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59238
EWS
Comment 2
2026-02-24 03:27:50 PST
Committed
308116@main
(603ace503c08): <
https://commits.webkit.org/308116@main
> Reviewed commits have been landed. Closing PR #59238 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug